--- a/WebContent/learn-jsgrid-02.html
+++ b/WebContent/learn-jsgrid-02.html
@@ -290,7 +290,7 @@
     }
 
     .card-size.hori {
-      width: 18rem; /*horizontal*/
+      width: 100%; /*horizontal*/
     }
 
     .card-control {
